Что-то произошло...

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
       <a href="">Logo</a>
     </header>
     <section class="top">
-        <h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eveniet doloremque veniam porro autem? Voluptate, recusandae. Inventore doloremque, tenetur nemo autem amet consequuntur ipsa reiciendis? Dolorem esse voluptatum ut saepe!
-        </h1>
+        <h1>Мое самое любимое имя...</h1>
     </section>
         <section class="bottom">
             <div class="item">Lorem.</div>
