added Yuriy Stepanovich Ryibnikov to index.html

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
             <div class="item">Rem.</div>
             <div class="item">Nesciunt.</div>
         </section>
+        <img src="img/1.jpg" alt="" class="ryibnikov">
 </body>
 </html>
